--- a/client/stylesheets/portfolio.css
+++ b/client/stylesheets/portfolio.css
@@ -1,15 +1,18 @@
 body{
     background-color: #1f1f1f;
-    font-size: 0.625em;
+}
+
+.pf-container {
+        font-size: 0.625em;
        font-family: 'Montserrat', sans-serif;
 }
 
 
- h2, h1, h5{
+.pf-container h2, h1, h5{
      font-family: 'Lobster Two', sans-serif;
  }
 
-.main{
+.pf-container .main{
     margin: 30px 20px 20px 320px;
     overflow: hidden;
 }
@@ -21,7 +24,7 @@ body{
     background-color:  #f26c51;
 }
 
-p {
+.pf-container p {
     opacity: 0;
     -webkit-transform: translate3d(100px,0px,0px);
     -moz-transform: translate3d(50px,0px,0px);
@@ -34,7 +37,7 @@ p {
     color: #808080;
 }
 
-article.about{
+.pf-container article.pf-about{
     position: absolute;
     left: 0;
     top: 40%;
@@ -44,7 +47,7 @@ article.about{
     padding-left: 30px;
 }
 
-.about h5{
+.pf-container .pf-about h5{
     opacity: 0;
     font-size: 3em;
     color: #ffffff;
@@ -55,7 +58,7 @@ article.about{
     transform: translate3d(50px,0px,0px);
 }
 
-.about.active h5{
+.pf-container .pf-about.active h5{
     opacity: 1;
     -webkit-transition: all 800ms cubic-bezier(0.390,0.575,0.565,1.000) 100ms;
     -moz-transition: all 800ms cubic-bezier(0.390,0.575,0.565,1.000) 200mss;
@@ -68,7 +71,7 @@ article.about{
     transform: translate3d(0px,0px,0px);
 }
 
-.about.active p{
+.pf-container .pf-about.active p{
     opacity: 1;
     -webkit-transition: all 800ms cubic-bezier(0.390,0.575,0.565,1.000) 200ms;
     -moz-transition: all 800ms cubic-bezier(0.390,0.575,0.565,1.000) 200mss;
@@ -81,7 +84,7 @@ article.about{
     transform: translate3d(0px,0px,0px);
 }
 
-a.button {
+.pf-container a.button {
     text-transform: uppercase;
     font-size: 1.3em;
     padding: 10px 30px;
@@ -100,16 +103,16 @@ a.button {
     font-weight: 400;
 }
 
-a.button.next {
+.pf-container a.button.next {
     margin-left: 20px;
 }
 
 
-a.button:hover{
+.pf-container a.button:hover{
     background: #f26c51;
 }
 
-nav{
+.pf-container nav{
     position: absolute;
     margin-left: 30px;
     margin-top: 20px;
