--- a/client/stylesheets/cr-home.css
+++ b/client/stylesheets/cr-home.css
@@ -6,11 +6,11 @@
  }
 
  h2, h1{
-     font-family: 'Lobster Two', sans-serif;
- }
-
- h2 {
-     font-size: 4em;
+    font-family: 'Cabin', sans-serif;
+    text-transform: uppercase;
+    font-size: 40px;
+    font-weight: 400;
+    letter-spacing: 3px;
  }
 
  p {
@@ -69,6 +69,10 @@
      text-align: center;
  }
  .main-container h1{
+    letter-spacing: 5px;
+     font-family: 'Cabin', sans-serif;
+    text-transform: uppercase;
+    font-weight: 400;
 font-size: 72px;
 line-height: 90px;
 border-bottom: 2px solid;
@@ -90,6 +94,12 @@ margin-bottom: 21px;
  .main-container h1,
  .main-container h2 {
      color: white;
+ }
+
+ .main-container #scrollTo:hover{
+    background-color: #f26c51;
+    opacity: 0.5;
+
  }
 
  .navbar {
@@ -250,7 +260,7 @@ margin-bottom: 21px;
  }
 
  .contact article h2{
-     color: #272A2F;
+     color: #f26c51;
      margin-bottom: 60px;
  }
  .contact article p{
