--- a/client/stylesheets/cr-home.css
+++ b/client/stylesheets/cr-home.css
@@ -26,7 +26,6 @@
 
 
  a.button {
-
      font-size: 1.3em;
      padding: 1em 3em;
      -webkit-border-radius: .3em;
@@ -57,7 +56,7 @@
      position: relative;
      height: 1000px;
      width: 100%;
-     background:  url(/bg.jpg) fixed  no-repeat;
+     background:  url(/bg.jpg) fixed bottom no-repeat;
      background-size: 100% auto;
  }
 
