--- a/client/stylesheets/portfolio.css
+++ b/client/stylesheets/portfolio.css
@@ -4,16 +4,24 @@ body{
 
 .pf-container {
         font-size: 0.625em;
-       font-family: 'Montserrat', sans-serif;
+       font-family: 'Raleway', sans-serif;
 }
 
+.pf-container a {
+     font-family: 'Montserrat', sans-serif;
+}
 
-.pf-container h2, .pf-container h1, .pf-container h5{
+.pf-container h2, .pf-container h1{
      font-family: 'Cabin', sans-serif;
  }
 
+ .pf-container h3, .pf-container h5{
+    font-family: 'Raleway', sans-serif;
+ }
+
+
 .pf-container .main{
-    margin: 30px 20px 20px 320px;
+    margin: 30px 20px 20px 350px;
     overflow: hidden;
 }
 
@@ -25,14 +33,15 @@ body{
 }
 
 .pf-container p {
+    margin-top: 20px;
     opacity: 0;
     -webkit-transform: translate3d(100px,0px,0px);
     -moz-transform: translate3d(50px,0px,0px);
     -ms-transform: translate3d(50px,0px,0px);
     -o-transform: translate3d(50px,0px,0px);
     transform: translate3d(50px,0px,0px);
-    margin-bottom: 30px;
-    font-size: 1.3em;
+    padding-bottom: 30px;
+    font-size: 1.4em;
     line-height: 1.4em;
     color: #808080;
 }
@@ -41,13 +50,16 @@ body{
     position: absolute;
     left: 0;
     top: 40%;
-    width: 240px;
+    width: 300px;
     height: 260px;
     margin-top: -130px;
     padding-left: 30px;
+    padding-bottom: 30px;
 }
 
+
 .pf-container .pf-about h5{
+    margin-bottom: 20px;
     line-height: 1.2em;
     opacity: 0;
     font-size: 3em;
@@ -57,6 +69,29 @@ body{
     -ms-transform: translate3d(50px,0px,0px);
     -o-transform: translate3d(50px,0px,0px);
     transform: translate3d(50px,0px,0px);
+}
+
+.pf-container .pf-about h3{
+ 
+     opacity: 0;
+    line-height: 25px;    
+    -webkit-transform: translate3d(80px,0px,0px);
+    -moz-transform: translate3d(50px,0px,0px);
+    -ms-transform: translate3d(50px,0px,0px);
+    -o-transform: translate3d(50px,0px,0px);
+    transform: translate3d(80px,0px,0px);
+}
+.pf-container .pf-about.active h3{
+    opacity: 1;
+    -webkit-transition: all 800ms cubic-bezier(0.390,0.575,0.565,1.000) 100ms;
+    -moz-transition: all 800ms cubic-bezier(0.390,0.575,0.565,1.000) 200mss;
+    -o-transition: all 800ms cubic-bezier(0.390,0.575,0.565,1.000) 200ms;
+    transition: all 800ms cubic-bezier(0.390,0.575,0.565,1.000) 200ms;
+    -webkit-transform: translate3d(0px,0px,0px);
+    -moz-transform: translate3d(0px,0px,0px);
+    -ms-transform: translate3d(0px,0px,0px);
+    -o-transform: translate3d(0px,0px,0px);
+    transform: translate3d(0px,0px,0px);
 }
 
 .pf-container .pf-about.active h5{
@@ -86,8 +121,6 @@ body{
 }
 
 .pf-container a.button {
-    text-transform: uppercase;
-    font-size: 1.3em;
     padding: 10px 30px;
     width: auto;
     background: none;
@@ -117,4 +150,12 @@ body{
     position: absolute;
     margin-left: 30px;
     margin-top: 20px;
+}
+
+.pf-container .back{
+    padding-bottom: 20px
+}
+
+.pf-container .back i{
+    padding-right: 5px
 }
